# dvs2

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  MAINTAINER.md  README.md  justfile
.github/workflows/: ci.yml
design/: AGENTS.md  INDEX-ARCHITECTURE.md  INDEX-ERRORS.md  INDEX-FILES.md  INDEX-FUNCTIONS.md  INDEX-TESTS.md  PRODUCT-SPEC.md  README.md
dvc-cli/: Cargo.toml
dvc-core/: Cargo.toml
dvcR/: DESCRIPTION
dvs/: Cargo.toml  README.md
dvs-cli/: Cargo.toml
dvs-cli/src/: globbing.rs  main.rs  output.rs  paths.rs
dvs-cli/src/commands/: add.rs  config.rs  get.rs  git_status.rs  init.rs  install.rs  local_config.rs  log.rs  materialize.rs  merge_repo.rs  mod.rs  pull.rs  push.rs  rollback.rs  status.rs  uninstall.rs
dvs-core/: Cargo.toml  build.rs
dvs-core/src/: lib.rs
dvs-core/src/helpers/: backend.rs  cache.rs  config.rs  copy.rs  file.rs  git_ops.rs  hash.rs  ignore.rs  layout.rs  mod.rs  parse.rs  reflog.rs  repo.rs  store.rs
dvs-core/src/ops/: add.rs  get.rs  init.rs  log.rs  materialize.rs  merge_repo.rs  mod.rs  pull.rs  push.rs  rollback.rs  status.rs
dvs-core/src/types/: config.rs  error.rs  file_info.rs  local_config.rs  manifest.rs  metadata.rs  mod.rs  oid.rs  outcome.rs  reflog.rs
dvs-daemon/: Cargo.toml
dvs-daemon/src/: config.rs  handler.rs  ipc.rs  lib.rs  watcher.rs
dvs-rpkg/: .Rbuildignore  .gitignore  NAMESPACE  README.md  bootstrap.R  cleanup  configure  configure.ac
dvs-rpkg/R/: dvs-wrappers.R  dvs.R  dvs_get_glob.R  dvs_glob.R
dvs-rpkg/inst/: .vendor.tar.xz.cksum
dvs-rpkg/inst/include/: mx_abi.h
dvs-rpkg/man/: dvs-package.Rd  dvs_add.Rd  dvs_add_json.Rd  dvs_config.Rd  dvs_get.Rd  dvs_get_glob.Rd  dvs_init.Rd  dvs_log.Rd  dvs_log_json.Rd  dvs_materialize.Rd  dvs_merge_repo.Rd  dvs_pull.Rd  dvs_pull_json.Rd  dvs_rollback_json.Rd  dvs_status.Rd  dvs_status_json.Rd  dvs_verify.Rd
dvs-rpkg/src/: Makevars.in  Makevars.win.in  entrypoint.c.in
dvs-rpkg/src/rust/: Cargo.toml  Cargo.toml.in  cargo-config.toml.in  document.rs.in  lib.rs
dvs-rpkg/tests/testthat/: test-dvs.R
dvs-server/: Cargo.toml
dvs-server/src/: api.rs  auth.rs  config.rs  lib.rs  storage.rs
dvs-testkit/: Cargo.toml
dvs-testkit/src/: diff.rs  integration.rs  lib.rs  repo.rs  runner.rs  scenario.rs  snapshot.rs
dvs/src/: audit.rs  config.rs  file.rs  gitignore.rs  globbing.rs  hashes.rs  init.rs  lib.rs  lock.rs  main.rs  migrate.rs  paths.rs
dvs/src/backends/: local.rs  mod.rs
dvsR/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  bootstrap.R  configure  configure.ac
dvsR/R/: dvs-package.R  dvs.R  dvsR-package.R  dvs_wrappers.R
dvsR/inst/: .vendor.tar.xz.cksum  vendor.tar.xz
dvsR/inst/include/: mx_abi.h
dvsR/man/: dvsR-package.Rd  dvs_add.Rd  dvs_get.Rd  dvs_get_json.Rd  dvs_hello.Rd  dvs_init_json.Rd  dvs_materialize_json.Rd  dvs_push.Rd  dvs_push_json.Rd  dvs_rollback.Rd  dvs_version.Rd
dvsR/src/: Makevars.in  dvs_wrappers.R  mx_abi.c
dvsR/src/rust/: Cargo.toml.in  cargo-config.toml.in  document.rs.in  lib.rs
dvsR/tests/testthat/: test-dvs.R
dvsexperimental_design/: ARCHITECTURE.md  COMMANDS.md  CONFIG.md  DATA_MODEL.md  GLOSSARY.md  README.md  REMOTE_SERVER.md  ROADMAP.md  SECURITY_AND_INTEGRITY.md  STATUS_AND_SYNC.md  STORAGE.md  TESTING.md  WORKFLOWS.md
plans/: 001-decoupling-architecture.md  DONE.md  TODO.md  commands.md
tools/: bump-version.R
ui/: journey-1-initial-setup.md  journey-2-adding-data-files.md  journey-3-getting-latest-files.md  journey-4-updating-data-files.md  journey-5-working-with-multiple-files.md
