[workspace]
members = ["dvs"]
exclude = ["dvsR"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1

[workspace.package]
version = "0.1.0"
authors = [
    'Jenna Johnson <jenna@a2-ai.com>',
    'Devin Pastoor <devin@a2-ai.com>',
    'Mossa Merhi Reimert <mossa@a2-ai.com>',
    'A2-Ai',
]
description = 'This package allows users to version large or sensitive files under Git without tracking the file directly.'
license = 'MIT'
edition = '2024'
rust-version = '1.85'

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9"
fs-err = "3"
log = "0.4.29"
blake3 = "1.8.3"
globset = "0.4"
walkdir = "2"
md5 = "0.8.0"
jiff = "0.2.18"
anyhow = "1.0.100"
whoami = "2"
