[package]
name = "dvs-cli"
description = """
Command-line interface for DVS (Data Version System).
"""
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "dvs"
path = "src/main.rs"

[features]
default = []
# Config format passthrough (for consistency in --all-features builds)
yaml-config = ["dvs-core/yaml-config"]
toml-config = ["dvs-core/toml-config"]

[dependencies]
dvs-core.workspace = true
clap = { version = "4.5", features = ["derive"] }
clap_complete.workspace = true
indicatif.workspace = true
thiserror.workspace = true
fs-err.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled = "0.17"
