[package]
name = "dvs-cli"
version.workspace = true
edition.workspace = true

[dependencies]
dvs = { path = "../dvs" }
anyhow.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
serde_json.workspace = true
globset = "0.4"
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "dvs"
path = "src/main.rs"
