[package]
name = "dvs-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
walkdir.workspace = true
globset.workspace = true
dvs = { path = "../dvs" }
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "dvs"
path = "src/main.rs"
