[package]
name = "dvs-core"
description = """
Core library for DVS (Data Version System).

Provides content-addressable storage with blake3 hashing for versioning large
or sensitive files under Git. This crate contains:
- Types: Config, Metadata, FileInfo, error types
- Operations: init, add, get, status
- Helpers: hashing, file copying, config loading, glob expansion
"""
publish = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["blake3", "git2-backend", "mmap", "walkdir"]
blake3 = ["dep:blake3"]
xxh3 = ["dep:xxhash-rust"]
sha256 = ["dep:sha2"]
all-hashes = ["blake3", "xxh3", "sha256"]
# Optional backends
git2-backend = ["dep:git2"]
mmap = ["dep:memmap2"]
walkdir = ["dep:walkdir"]

[dependencies]
# Serialization
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

# Hashing (mmap is optional optimization)
memmap2 = { workspace = true, optional = true }

# Hash algorithms (optional features)
blake3 = { workspace = true, optional = true }
xxhash-rust = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

# File system
fs-err.workspace = true
walkdir = { workspace = true, optional = true }
glob.workspace = true

# Utilities
chrono.workspace = true
file-owner = "0.1.2"
path-absolutize = "3.1.1"
xdg = "3.0.0"
pathdiff = "0.2.3"
libc = "0.2"

# Git (optional - falls back to CLI)
git2 = { workspace = true, optional = true }

# User info
whoami = "2.0.2"

# Error handling
exn = "0.2.1"

# Optional
rayon = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.24.0"
